@@ -13,5 +13,6 @@ else
 end
 
 config.to_prepare do
+  OpenID::Util.logger = Rails.logger
   ActionController::Base.send :include, OpenIdAuthentication
 end
